# Lumos

./: .gitignore  Makefile  README.md  canvas.html  index.html  package.electron.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
Casks/: lumos.rb
docs/superpowers/plans/: 2026-05-08-lumos-tauri-rewrite.md  2026-05-09-lumos-ui-redesign.md
docs/superpowers/specs/: 2026-05-09-lumos-ui-redesign.md
src/: App.tsx  canvas.tsx
src-electron/main/: index.js
src-electron/renderer/about_page/: index.html
src-electron/renderer/app_page/: index.html  preload.js
src-electron/renderer/extended_toolbar_page/: index.html  index.js  preload.js
src-electron/renderer/settings_page/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  display.rs  hotkeys.rs  lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/effects/: cursor.rs  mod.rs  spotlight.rs  zoom.rs
src-tauri/src/overlay/: event_tap.rs  mod.rs  panel.rs
src-tauri/src/renderer/: canvas.rs  draw.rs  mod.rs
src-tauri/src/tools/: laser.rs  mod.rs
src/components/Drawing/: DrawingCanvas.tsx
src/components/Toolbar/: ActionButton.tsx  ColorDot.tsx  ColorGroup.tsx  ColorPicker.tsx  Divider.tsx  ModeChip.tsx  ToolButton.tsx  Toolbar.module.css  Toolbar.tsx  WidthDot.tsx  WidthGroup.tsx
src/hooks/: useAppState.ts  useToolState.ts  useToolbarPosition.ts
src/types/: index.ts
tools/forge/: forge.config.js
tools/webpack/: main.js  renderer.js
(+13 files in other folders)
