[package]
name = "lumos"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
name = "lumos_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lumos"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"

# macOS native (cfg-guarded)
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.25"
core-foundation = "0.10"
metal = "0.28"
core-graphics-types = "0.1"
skia-safe = { version = "0.75", features = ["metal", "textlayout"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
